Implemented -b <batch file> option. To execute genoogle and it will execute directly the batch file. Task #47. Refactoring removing Console class from the WebServer class. Console and WebServer classes moved to bio.pih.interfaces package. Added the CircularArrayList JUnits class: TestCircularArrayList. Better, but not good, index.jsp